--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./index.css">
   
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
   <main class="container">
     <section class="img-section">
-      <img class="code-img"src="images/image-qr-code.png" alt="qr-codd">
+      <img class="code-img"src="./image-qr-code.png" alt="qr-codd">
     </section>
 
     <section class="text-section">
